# Namekart-ai-agents

./: AGENT_PIPELINE_GUIDE.md  README.md  conftest.py  main.py  pyproject.toml  test_bulk.py  test_prompts.py  test_schemas.py
agents/: apr_bridge.py  bulk_classifier.py  domain_quality.py  linguistic_agent.py  llm_client.py  market_agent.py  pipeline.py  scoring.py  valuation_agent.py
api/: routes.py
app/: config.py  main.py  scheduler.py
data/: Shortlisted_Domains.csv  seed_domains.csv
data/chroma_db/: chroma.sqlite3
data/monitoring/: demo_linguistic_breakdown_run1.csv  demo_linguistic_comparison_table.csv  demo_linguistic_comparison_table.md
data/reports/relaxed_shortlisted_domains/: all_domains_report.csv  bulk_shortlisted.csv  linguistic_shortlisted.csv  pipeline_results.csv
data/reports/strict_shortlisted_domains/: all_domains_report.csv  bulk_shortlisted.csv  linguistic_shortlisted.csv  pipeline_results.csv
db/: connection.py  models.py  queries.py
prompts/: __init__.py  bulk_classifier.py  linguistic.py  market.py  valuation.py
schemas/: apr_result.py  bulk_filter.py  linguistic.py  market.py  valuation.py
schemas/prompts/: bulk_classifier.py  linguistic.py  market.py  valuation.py
scripts/: benchmark_shortlisted_models.py  build_monitoring_comparison.py  demo_linguistic_breakdown.py  export_pipeline_csvs.py  export_reports_from_csv.py  export_yesterday_to_seed.py  test_filters.py
tests/: test_ai_acquisition_ranking.py  test_apr_integration.py  test_filtering.py  test_scoring.py
tools/: java_api_client.py  tavily_search.py
