[project]
name = "namekart-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "instructor>=1.15.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langsmith>=0.8.5",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tavily-python>=0.7.24",
    "uvicorn>=0.47.0",
    # APR-Prediction-Agent bridge dependencies
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "requests>=2.31.0",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:langsmith.wrappers._openai_agents is deprecated:DeprecationWarning",
]
